# microDify

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Makefile  alembic.ini  docker-compose.yml  make.ps1  pyproject.toml  skills-lock.json  start.sh  stop.sh
alembic/: env.py
alembic/versions/: bd71cd6d35f1_init_all_tables.py  c1e2f3a4b5c6_add_provider_configs_and_user_role_status.py  d3e4f5a6b7c8_replace_api_key_with_auth_config.py  e7f8a9b0c1d2_add_provider_models_table.py  f9a0b1c2d3e4_add_provider_health_status_fields.py
app/: main.py
app/agent/: __init__.py  executor.py  models.py  router.py  schemas.py  service.py
app/auth/: __init__.py  deps.py  models.py  router.py  schemas.py  service.py
app/chat/: __init__.py  models.py  router.py  schemas.py  service.py
app/common/: __init__.py  models.py  redis_client.py  router.py  schemas.py  service.py
app/core/: __init__.py  config.py  database.py  deps.py  exceptions.py  logging.py  middleware.py  models.py  router.py  schemas.py  security.py  service.py
app/knowledge/: __init__.py  chunker.py  models.py  parser.py  router.py  schemas.py  service.py
app/prompt/: __init__.py  models.py  router.py  schemas.py  service.py
app/provider/: __init__.py  anthropic_provider.py  base.py  models.py  openai_provider.py  registry.py  (+3 more)
docs/: deployment.md  design-system.html  frontend-style-prompt.md  frontend-template.html  microDify-map.md  prompt-map.md  skills-help.md  vision.md  前端页面实现（按优先级顺序）.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
tests/: conftest.py
(+69 files in other folders)
